--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,15 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "cloudpickle (>=3.1.1,<4.0.0)",
+    "redis (>=5.2.1,<6.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+
