--- a/distworker/configs/worker_configs.json
+++ b/distworker/configs/worker_configs.json
@@ -6,5 +6,6 @@
   "redis_port": 6379,
   "taskstream": "tasks",
   "taskgroup": "taskgroup",
+  "min_idle_time_pending": 120000,
   "max_wait_milli_second": 10000
 }
